--- a/index.html
+++ b/index.html
@@ -6,39 +6,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="css/home.css" rel="stylesheet">  
+
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 
+<!-- Heading with phone number -->
 
 	<div class="container">
 		<div class="row text-center">
-			<div class="col-md-6 col1">
-				<p class="uppercase">call us today at</p>
+			<div class="col-sm-3">
+				
 			</div>
-			<div class="col-md-6 col2">
-				<p><a href="tel:1-919-732-1056">	(919) 732-1056</a></p>
+			<div class="col-sm-3">
+				<h3 class="text-uppercase">call us today</h3>
+			</div>
+			<div class="col-sm-3">
+				<h3><a href="tel:1-919-732-1056">	(919) 732-1056</a></h3>
 			</div>
 		</div>
 	</div>
 
 
+<!-- Navigation -->
+
 	<nav class="navbar navbar-inverse">
-		<div class="container-fluid">
-    		<div class="navbar-header">
-      			<a href="file:///Users/owner/Desktop/Comp%20126/DHC%20Automotive/index.html" class="navbar-brand">DHC Automotive</a>
-    		</div>
-				<ul class="nav navbar-nav">
+		<div class="container">
+      			<a href="#" class="navbar-brand">DHC Automotive</a>
+    			<button class="navbar-toggle" data-toggle="collapse" data-target=".navHeaderCollapse">
+    				<span class="icon-bar"></span>
+    				<span class="icon-bar"></span>
+    				<span class="icon-bar"></span>
+    			</button>
+    		<div class="collapse navbar-collapse navHeaderCollapse">
+    			<ul class="nav navbar-nav navbar-right">
 					<li class="active"><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Services</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
+    		</div>
 		</div>
 	</nav>
+	
+
+	<!-- Image -->
+	<!-- NOTE THIS IS A TEMPORARY IMAGE -->
+
+	<div class="container">
+		<img src="http://www.dunellenautorepair.com/pic2.jpg" class="img-responsive">
+
+	</div>
+
+<br />
+
+<div class="container text-center">
+	<h1>DHC Automotive</h1>
+	<p>DHC Automotive provides expert automotive repairs to the Hillsborugh NC area...<br> Additional general information about company here.</p>
+</div>
 
 
+<!-- Information on main services tab -->
+
+<div class="container">
+<ul class="nav nav-tabs nav-justified">
+  <li class="active"><a data-toggle="tab" href="#tab1">Repairs</a></li>
+  <li><a data-toggle="tab" href="#tab2">Towing</a></li>
+  <li><a data-toggle="tab" href="#tab3">Maintaince</a></li>
+  <li><a data-toggle="tab" href="#tab4">Inspections</a></li>
+</ul>
+
+<div class="tab-content">
+  <div id="tab1" class="tab-pane fade in active">
+    <h3>Repairs</h3>
+    <p>Content regarding repairs</p>
+  </div>
+  <div id="tab2" class="tab-pane fade">
+    <h3>Towing</h3>
+    <p>Content regarding towing</p>
+  </div>
+  <div id="tab3" class="tab-pane fade">
+    <h3>Maintaince</h3>
+    <p>Content regarding maintance</p>
+  </div>
+  <div id="tab4" class="tab-pane fade">
+    <h3>Inspections</h3>
+    <p>Content regarding inspections</p>
+  </div>
+</div>
+</div>
+
+<br />
+
+<!-- Additional Contact Section -->
+
+<div class="container text-center">
+		<h2 class="text-uppercase">Contact Us Today!</h2>
+		<p>Are you in need of vehicle repair or maintaince? DHC Automotive offers a variety of services for your automotive needs. Give us a call today at (919) 732-1056 or click the link below to fill out a contact form.</p>
+		<button type="button" class="btn btn-primary"><a herf="#">Contact</a></button>
+	</div>
+	<br />
+
+<!-- Footer -->
+
+<div class="navbar navbar-inverse">
+	 <div class="container">
+		<div class="row">
+			<div class="col-sm-4">
+				<h2>DHC Automotive</h2>
+			</div>
+			<div class="col-sm-4 text-center">
+				
+				<h6>3623 Walnut Grove Church Rd</h6>
+				<h6>Hillsborough, NC 27278</h6>
+				<h6>(919) 732-1056</h6>
+			</div>
+			<div class="navbar-text pull-right">
+				<a href="#"><i class="fa fa-facebook-square fa-2x"></i></a>
+			</div>
+			
+		</div>
+	</div>
+</div>
 </body>
 </html>
